# hollingsbot3

./: -  .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_SUMMARIZATION.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  IMPLEMENTATION_PLAN_TIME_BASED_SUMMARIES.md  Makefile  PLAN_SUMMARIZATION_INTEGRATION.md  README.md  bot.py  caption.py  debug_syndication.py  docker-compose.arm.yml  docker-compose.orange-pi.yml  docker-compose.yml  fetch_today_messages.py  image_gen_config.json  migrate_discord_export.py  prompt_db.py  pyproject.toml  repomix-output.xml  requirements.txt  seed_summaries.py  tasks.py  test_search.py  watch_for_updates.py
.claude/: settings.local.json
.github/workflows/: ci.yml  notify-discord.yml  test.yml
cogs/: enhance_cog.py  general.py  gpt2_chat.py  image_edit.py  image_gen_cog.py  llm_chat.py  pr_manager.py  starboard.py
config/: gemini_bot_system_prompt.txt  image_gen.json  llama_bot_system_prompt.txt  system_prompt.txt  temp_bot_system_prompt.txt
docker/: Dockerfile  Dockerfile.arm  redis.conf
image_generators/: __init__.py  base.py  replicate_api.py
prototype_summarization/: README.md  __init__.py  incremental_24h.txt  incremental_simulator.py  sim_72h.txt  sim_72h_full.txt  simulator.py  summarizer.py  summary_cache.py  summary_worker.py  time_windows.py
prototype_summarization/tests/: __init__.py  test_summarizer.py  test_summary_cache.py  test_summary_worker.py  test_time_windows.py
scripts/: auto_deploy.sh  backfill_historical_summaries.py  check_messages.py  hollingsbot-deploy.service  hollingsbot-deploy.timer  import_starboard_archive.py  migrate_discord_backup.py  migrate_temp_bot_history.py  migrate_to_unified_db.py  post_pr_summary.py  reset_model_prefs.py  simulate_tamagotchi.py  summarize_temp_bot_conversations.py
scripts/wendy/: check_messages.sh  deploy.sh  game_logs.sh  query_db.py  search_messages.py  send_message.sh
src/hollingsbot/: __init__.py  __main__.py  available_models.json  caption.py  cost_tracking.py  image_gen_config.json  prompt_db.py  settings.py  tasks.py  temp_bot_db.py  url_metadata.py  wendy_proxy.py
src/hollingsbot/cogs/: admin.py  auto_pin.py  best_bot_posts.py  chat_coordinator.py  chat_utils.py  conversation.py  credits_cog.py  debug_commands.py  enhance_cog.py  feature_requests.py  general.py  gif_chain.py  gpt2_chat.py  image_edit.py  image_gen_cog.py  llm_chat.py  llm_chat.py.backup  llm_chat.py.deprecated  llm_chat_new.py  message_logger.py  starboard.py  temp_bot_commands.py  typing_tracker.py  wendy_outbox.py  yeah_streak.py
src/hollingsbot/cogs/chat_bots/: gemini_bot.py  grok_bot.py  llama_bot.py  temp_bot.py  wendy_bot.py
src/hollingsbot/cogs/chat_bots/temp_bot/: __init__.py  debug_log.py  identity.py  manager.py  names.py  summary.py
src/hollingsbot/cogs/tamagotchi/: __init__.py  cog.py  constants.py  database.py  display.py  helpers.py  tick.py
src/hollingsbot/image_generators/: __init__.py  base.py  replicate_api.py  svg_gpt.py  upscalers.py
src/hollingsbot/summarization/: __init__.py  summarizer.py  summary_cache.py  summary_worker.py  time_windows.py
src/hollingsbot/text_generators/: __init__.py  anthropic.py  base.py  claude_cli.py  gemini.py  grok.py  huggingface.py  openai_chatgpt.py  openrouter.py
src/hollingsbot/tools/: __init__.py  agentic_search.py  image_gen.py  notebook.py  parser.py  personal_assistant.py  search_history.py  tokens.py
src/hollingsbot/utils/: discord_utils.py  image_utils.py  outpaint_utils.py  svg_utils.py
src/hollingsbot3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_anthropic_generator.py  test_best_bot_posts.py  test_caption.py  test_chat_utils.py  test_cost_tracking.py  test_discord_utils.py  test_enhance_cog.py  test_general.py  test_gpt2_chat.py  test_image_gen_cog.py  test_image_generators.py  test_prompt_db.py  test_settings.py  test_starboard.py  test_summarization.py  test_svg_gpt.py  test_svg_utils.py  test_temp_bot_cleanup.py  test_temp_bot_names.py  test_text_generators.py  test_tools_parser.py  test_url_metadata.py
text_generators/: __init__.py  anthropic.py  huggingface.py  openai_chatgpt.py
